        ConsoleLoggerEngine::setConsoleFormattingEnabled(), ConsoleLoggerEngine::consoleFormattingEnabled()
        and ConsoleLoggerEngine::setConsoleFormattingHint().
        Also, a bunch of known colors and escape related characters were added to LoggerEngines.h.
        Note that this does not work on Windows.

    ============================
    QtilitiesCore:
    ============================
    [+] Added QtilitiesProcess::setProcessBufferMessageTypeHint(). Also, added new
        class ProcessBufferMessageTypeHint used in this function.
    [+] Added FileUtils::toUnixPath().
    [+] Added FileUtils::writeStringToFile().

    [#] QtilitiesProcess::logProgressOutput() and QtilitiesProcess::logProgressError() are now protected slots, allowing
        subclasses to reimplement its functionality. Also, bunch of improvements internally in QtilitiesProcess and
        detailed documentation how messages from the backend process are buffered was added.

    [*] Fixed bug in Observer::handle_deletedSubject() where application can sometimes
        crash with "Detected QWeakPointer creation in a QObject being deleted".

    ============================
    QtilitiesCoreGui:
    ============================
    [+] Added TaskSummaryWidget::getSingleTaskWidgetForTask().
    [+] WidgetLoggerFrontends now has the option to specify where and if toolbars with actions related to the
        displayed log should be shown.
    [+] Added TaskLogNoInitialization to the TaskLogInitialization enumeration in TaskManagerGui. This allows tasks to be used more efficiently in console applications.
    [+] Add ability to refresh icons in Mode Manager dynamically at runtime. See issue #96.

    [#] Slightly improved layout in SingleTaskWidget.

    ============================
    QtilitiesExtensionSystem:
    ============================

    ============================
    QtilitiesProjectManagement:
    ============================

    ============================